fixtures/typescript/fallback/should_fail/promise_catch_default.ts
export async function loadName(fetcher: () => Promise<string>): Promise<string | null> {
  return fetcher().catch(() => null)
}
